--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,8 +3,6 @@ app:
   port: :3000
 
 database:
-  host: localhost
-  port: :3306
-  user: your_username
-  password: your_password
-  name: currency_exchange_db
+  dsn: root:wjh0306@tcp(172.25.96.1:3306)/test?charset=utf8mb4&parseTime=True
+  MaxIdleConns: 10
+  MaxOpenConns: 100
